Removed deprecated Double constructor